@@ -3,12 +3,14 @@
 
 package com.azure.core.serializer.json.jackson;
 
+import com.azure.core.http.HttpHeaderName;
 import com.azure.core.http.HttpHeaders;
 import com.azure.core.http.HttpMethod;
 import com.azure.core.implementation.AccessibleByteArrayOutputStream;
 import com.azure.core.models.GeoObjectType;
 import com.azure.core.models.JsonPatchDocument;
 import com.azure.core.util.DateTimeRfc1123;
+import com.azure.core.util.UrlBuilder;
 import com.azure.core.util.serializer.CollectionFormat;
 import com.azure.core.util.serializer.SerializerAdapter;
 import com.azure.core.util.serializer.SerializerEncoding;
@@ -26,6 +28,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
@@ -206,7 +209,7 @@ public class JacksonAdapterTests {
     public void stronglyTypedHeadersClassIsDeserialized() throws IOException {
         final String expectedDate = DateTimeRfc1123.toRfc1123String(OffsetDateTime.now());
 
-        HttpHeaders rawHeaders = new HttpHeaders().set("Date", expectedDate);
+        HttpHeaders rawHeaders = new HttpHeaders().set(HttpHeaderName.DATE, expectedDate);
 
         StronglyTypedHeaders stronglyTypedHeaders = JacksonAdapter.defaultSerializerAdapter()
             .deserialize(rawHeaders, StronglyTypedHeaders.class);
@@ -216,7 +219,7 @@ public class JacksonAdapterTests {
 
     @Test
     public void stronglyTypedHeadersClassThrowsEagerly() {
-        HttpHeaders rawHeaders = new HttpHeaders().set("Date", "invalid-rfc1123-date");
+        HttpHeaders rawHeaders = new HttpHeaders().set(HttpHeaderName.DATE, "invalid-rfc1123-date");
 
         assertThrows(DateTimeParseException.class, () -> JacksonAdapter.defaultSerializerAdapter()
             .deserialize(rawHeaders, StronglyTypedHeaders.class));
@@ -335,7 +338,7 @@ public class JacksonAdapterTests {
         }
     }
 
-    private static Stream<Arguments> textDeserializationSupplier() throws MalformedURLException {
+    private static Stream<Arguments> textDeserializationSupplier() throws MalformedURLException, URISyntaxException {
         byte[] helloBytes = "hello".getBytes(StandardCharsets.UTF_8);
         String urlUri = "https://azure.com";
         byte[] urlUriBytes = urlUri.getBytes(StandardCharsets.UTF_8);
@@ -366,8 +369,8 @@ public class JacksonAdapterTests {
             Arguments.of("1".getBytes(StandardCharsets.UTF_8), byte[].class, "1".getBytes(StandardCharsets.UTF_8)),
             Arguments.of("true".getBytes(StandardCharsets.UTF_8), boolean.class, true),
             Arguments.of("true".getBytes(StandardCharsets.UTF_8), Boolean.class, true),
-            Arguments.of(urlUriBytes, URL.class, new URL(urlUri)),
-            Arguments.of(urlUriBytes, URI.class, URI.create(urlUri)),
+            Arguments.of(urlUriBytes, URL.class, UrlBuilder.parse(urlUri).toUrl()),
+            Arguments.of(urlUriBytes, URI.class, new URI(urlUri)),
             Arguments.of(getObjectBytes(offsetDateTime), OffsetDateTime.class, offsetDateTime),
             Arguments.of(getObjectBytes(dateTimeRfc1123), DateTimeRfc1123.class, dateTimeRfc1123),
             Arguments.of(getObjectBytes(localDate), LocalDate.class, localDate),
@@ -397,7 +400,7 @@ public class JacksonAdapterTests {
         private final DateTimeRfc1123 date;
 
         public StronglyTypedHeaders(HttpHeaders rawHeaders) {
-            String dateString = rawHeaders.getValue("Date");
+            String dateString = rawHeaders.getValue(HttpHeaderName.DATE);
             this.date = (dateString == null) ? null : new DateTimeRfc1123(dateString);
         }
 
